--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,6 @@ jobs:
     - name: hello world 출력!!
       run: echo hello, world!
     - name: 디렉토리 출력!!
-      run: ls =al
+      run: ls -al
     - name: 파이썬 버전 출력!!
       run: python -V    
