--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    - name: hello world 출력!!
-      run: echo hello, world!
-    - name: 디렉토리 출력!!
-      run: ls -al
-    - name: 파이썬 버전 출력!!
-      run: python -V    
+    - uses: actions/checkout@v2
+    - name: 파이썬 실행!!
+      run: python test.py
